<resources>
    <string name="app_name">Contacts Manager</string>
    <string name="show_additional_fields">Show additional fields</string>
    <string name="hide_additional_fields">Hide additional fields</string>
    <string name="name_edit_text">Name</string>
    <string name="phone_edit_text">Phone Number</string>
    <string name="email_edit_text">Email</string>
    <string name="address_edit_text">Address</string>
    <string name="job_edit_text">Job Title</string>
    <string name="company_edit_text">Company</string>
    <string name="website_edit_text">Website</string>
    <string name="im_edit_text">IM</string>
    <string name="save_button">SAVE</string>
    <string name="cancel_button">CANCEL</string>
    <string name="phone_error">Phone Error</string>
    
</resources>
