<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ro.pub.cs.systems.eim.lab04.contactsmanager.ContactsManagerActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <Button
               android:id="@+id/show_additional_fields_button"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/show_additional_fields"
               android:layout_gravity="right"
               />
           <EditText
               android:id="@+id/name_edit_text"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/name_edit_text"
               android:inputType="text"
               />
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/phone_edit_text"
               android:hint="@string/phone_edit_text"
               android:enabled="false"
               android:inputType="number"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/email_edit_text"
               android:hint="@string/email_edit_text"
               android:inputType="text"
               />
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/address_edit_text"
               android:inputType="text"
               android:hint="@string/address_edit_text"
               />
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_gravity="center"
               >
               <Button
                   android:id="@+id/save_button"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   android:text="@string/save_button"
                   />
               <Button
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/cancel_button"
                   android:id="@+id/cancel_button"
                   android:gravity="center"/>

           </LinearLayout>

       </LinearLayout>

       <LinearLayout
           android:id="@+id/additional_fields_container"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:visibility="gone">

           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/job_edit_text"
               android:inputType="text"
               android:hint="@string/job_edit_text"
               />

           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/company_edit_text"
               android:inputType="text"
               android:hint="@string/company_edit_text"
               />
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/website_edit_text"
               android:inputType="text"
               android:hint="@string/website_edit_text"
               />
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/im_edit_text"
               android:hint="@string/im_edit_text"
               android:inputType="text"
               />

       </LinearLayout>

   </LinearLayout>

</ScrollView>
